relm-derive/tests/ui/widget-attribute/no-model-method.stderr
error: unexpected end of input, model method not found
 --> $DIR/no-model-method.rs:3:1
  |
3 | #[widget]
  | ^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
